# UAP_Dog_Whistle

./: README.md  SETUP.md  pyproject.toml
active-discovery/: README.md  __init__.py  active_beacon.py  config.py  probe_library.py  response_analyzer.py
electromechanical/: README.md  THEORY.md  em_dogwhistle.py
hydrogen-line-beacon/: BUILD-GUIDE.md  pyproject.toml
shard/: README.md
